- FIX:/UI/VCAEngine: Preparing IO for widget's calc function is fixed. Focus attribute include from all active included widgets.
- FIX:/UI/VCAEngine: Included containers order is changed to: included widgets, attributes, pages.
- /UI/VCAEngine: New created attributes is made inited by EVAL. After attribute's identifier or type changing is made value copy.
- FIX:/UI/Vision: The master page open procedure is rewrited.
- !:/UI/Vision: No standard key codes event generation is added, by view "key_#0ABh".
- /UI/Vision: A edit line update, for primitive "FormEl" is disabled on time it user edition.
- FIX:/UI/Vision: Active and enable attribute's action is fixed for all primitives.
- FIX:/UI/Vision: Left and bottom one pixels border's line hiding is fixed for primitive "Text".
- FIX:/UI/Vision: Average equalent time values is fixed on primitive "Diagram".
- /SYS: Demo DB is updated.


2008-03-03 Roman
- !!:/DAQ/System: Documentation and translation is updated and version 1.6.0 is relised.
- !!:/DAQ/System: Libsensors library for sensors support is added.
- !!!!:/SYS: Add new files of generic documentations: FAQ.pdf, AboutOpenSCADA.pdf, release_0.6.0_uk.pdf, release_0.6.0.pdf and FAQ_uk.pdf.
- /SYS: Update documentations: release_0.6.0_ru.pdf and FAQ_ru.pdf.
- FIX:/DAQ/Value: EVAL_REAL values display is fixed.
- !:/UI/VCAEngine: Support user atributes into included widget's is added.
- !:/UI/Vision: Usable date attributes edit is added.


2008-02-29 Roman
- FIX:/DB/MySQL: Zero fields depth is fixed.


2008-02-28 Roman
- !!:/Archive/DBArch: Documentation and translation is updated and version 0.6.0 is relised.
- !!:/Archive/FSArch: Documentation and translation is updated and version 0.9.6 is relised.
- !!:/DB/FireBird: Documentation and translation is updated and version 0.7.0 is relised.
- !!:/DB/MySQL: Documentation and translation is updated and version 1.3.1 is relised.
- !!:/DB/SQLite: Documentation and translation is updated and version 1.3.1 is relised.